fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body{
 
 .bannerLink{
     text-decoration: none;
-    background-color: aqua;
+    background-color: gray;
     text-align: center;
     writing-mode: vertical-rl;
     font-size: 50px;
